--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "sweetalert2",
-  "version": "11.10.1",
-  "repository": "sweetalert2/sweetalert2",
-  "homepage": "https://sweetalert2.github.io/",
-  "description": "A beautiful, responsive, customizable and accessible (WAI-ARIA) replacement for JavaScript's popup boxes, supported fork of sweetalert",
+  "name": "br-swal2",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/orxtime/br-sweetalert2.git"
+  },
   "main": "dist/sweetalert2.all.js",
   "browser": "dist/sweetalert2.all.js",
   "module": "dist/sweetalert2.all.js",
@@ -23,7 +24,6 @@
     "jquery": "^3.6.1",
     "playwright-webkit": "^1.37.1",
     "prettier": "^3.0.0",
-    "rollup": "^4.0.0",
     "sass": "^1.55.0",
     "stylelint": "^15.0.0",
     "typescript": "4.3.5",
@@ -37,15 +37,6 @@
     "dist",
     "src",
     "sweetalert2.d.ts"
-  ],
-  "author": "Limon Monte (https://limonte.github.io)",
-  "contributors": [
-    "Matthew Francis Brunetti <zenflow87@gmail.com> (https://github.com/zenflow)",
-    "Morgan Touverey-Quilling <mtouverey@alembic-dev.com> (https://github.com/toverux)",
-    "Giuseppe Verni (https://github.com/gverni)",
-    "Sam Turrell <sam@samturrell.co.uk> (https://github.com/samturrell)",
-    "Joseph Schultz (https://github.com/acupofjose)",
-    "Johan Fagerberg (https://github.com/birjolaxew)"
   ],
   "keywords": [
     "sweetalert",
@@ -67,10 +58,6 @@
     "cypress:open": "cypress open",
     "webpack-build": "webpack --config=test/webpack/webpack.config.js"
   },
-  "funding": {
-    "type": "individual",
-    "url": "https://github.com/sponsors/limonte"
-  },
   "prettier": {
     "printWidth": 120,
     "semi": false,
@@ -78,6 +65,5 @@
     "quoteProps": "consistent",
     "trailingComma": "es5"
   },
-  "bugs": "https://github.com/sweetalert2/sweetalert2/issues",
   "license": "MIT"
 }
